secrets, css., etc

--- a/codecats_cv/static/codecats-cv.css
+++ b/codecats_cv/static/codecats-cv.css
@@ -1,32 +1,25 @@
 body {
-    padding-top: 25px;
+    padding-top: 1em;
 }
 
 .searchbar {
     float: right;
-    margin-right: 25px;
+    margin-right: 1em;
 }
 
 .contact {
-    margin-left: 25px;
+    margin-left: 1em;
 }
 
-.gitbutton {
+.buttons {
     position: fixed;
     bottom: 0;
     right: 0;
-    margin-right: 25px !important;
-    margin-bottom: 25px !important;
-}
-
-.add {
+    margin-right: 1em;
+    margin-bottom: 1em;
     font-size: 16px;
 }
 
-.addbutton {
-    position: fixed !important;
-    bottom: 0 !important;
-    right: 0 !important;
-    margin-right: 225px !important;
-    margin-bottom: 25px !important;
+.buttons a {
+    color: white;
 }
