--- a/codecats_cv/static/codecats-cv.css
+++ b/codecats_cv/static/codecats-cv.css
@@ -1,25 +1,3 @@
 body {
-    padding-top: 1em;
-}
-
-.searchbar {
-    float: right;
-    margin-right: 1em;
-}
-
-.contact {
-    margin-left: 1em;
-}
-
-.buttons {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    margin-right: 1em;
-    margin-bottom: 1em;
-    font-size: 16px;
-}
-
-.buttons a {
-    color: white;
+    padding: 1em;
 }
