--- a/codecats_cv/view/languages.html
+++ b/codecats_cv/view/languages.html
@@ -19,7 +19,10 @@
     <div class="extra content">
         <div id="{{ language.name }}" class="ui indicating progress">
             <div class="bar"></div>
-            <div class="label"><i class="{{ language.flag }} flag"></i> {{ language.name }} - {{ language.level }}% fluent</div>
+            <div class="label">
+                <i class="{{ language.flag }} flag"></i>
+                {{ language.name }} - {{ language.level }}% fluent
+            </div>
         </div>
     </div>
     {% endfor %}
