--- a/codecats_cv/view/main.html
+++ b/codecats_cv/view/main.html
@@ -31,7 +31,9 @@
                     <div class="results"></div>
                 </div>
                 <div class="ui five wide stackable column">
-                    <a class="ui primary button" href="https://github.com/obestwalter/codecats-cv" target="_blank">
+                    <a class="ui primary button"
+                       href="https://github.com/obestwalter/codecats-cv"
+                       target="_blank">
                         <i class="github icon"></i>Code
                     </a>
                 </div>
